scala/.metals/.reports/metals/r_scala-toplevel-mtags_1690637026009
id: file://<WORKSPACE>/src/main/scala/Main.scala:[93..94) in Input.VirtualFile("file://<WORKSPACE>/src/main/scala/Main.scala", "
sealed trait Expr 
object Expr {
    case class Str(s: String) extends Expr
    case class 
}

object Main extends App {
    println("Hi")

}

")
file://<WORKSPACE>/src/main/scala/Main.scala:6: error: expected identifier; obtained rbrace
}
^